2011-07-25   Gisle Aas <gisle@ActiveState.com>

   Release 1.03

   Depend on Digest::SHA instead of Digest::SHA1 [RT#69776]

   Document the blocksize argument [RT#14551]



2010-01-10   Gisle Aas <gisle@ActiveState.com>

   Release 1.02

   Give the distribution a META.yml file



2000-03-13   Gisle Aas <gisle@ActiveState.com>

   Release 1.01

   Broken out of the Digest-MD5-2.12 distribution and made into
   a separate dist.