@@ -1,37 +1,45 @@
-require 5.004;
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.010.
+use strict;
+use warnings;
+
+use 5.004;
+
 use ExtUtils::MakeMaker;
 
-WriteMakefile(
-    'NAME'	   => 'Digest::HMAC',
-    'VERSION_FROM' => 'lib/Digest/HMAC.pm',
-    'ABSTRACT_FROM' => 'lib/Digest/HMAC.pm',
-    'PREREQ_PM'    => { 'Digest::MD5' => 2.00,
-                        'Digest::SHA' => 1.00,
-                      },
-    'AUTHOR'       => 'Gisle Aas <gisle@activestate.com>',
-    'LICENSE'      => 'perl',
-    'MIN_PERL_VERSION' => 5.004,
+my %WriteMakefileArgs = (
+  "ABSTRACT" => "Keyed-Hashing for Message Authentication",
+  "AUTHOR" => "Andrew Rodland <arodland\@cpan.org>",
+  "CONFIGURE_REQUIRES" => {
+    "ExtUtils::MakeMaker" => 0
+  },
+  "DISTNAME" => "Digest-HMAC",
+  "LICENSE" => "perl",
+  "MIN_PERL_VERSION" => "5.004",
+  "NAME" => "Digest::HMAC",
+  "PREREQ_PM" => {
+    "Digest::MD5" => 2,
+    "Digest::SHA" => 1
+  },
+  "VERSION" => "1.03_01",
+  "test" => {
+    "TESTS" => "t/*.t"
+  }
 );
 
 
-BEGIN {
-    # compatibility with older versions of MakeMaker
-    my $developer = -f ".gitignore";
-    my %mm_req = (
-        LICENCE => 6.31,
-        META_MERGE => 6.45,
-        META_ADD => 6.45,
-        MIN_PERL_VERSION => 6.48,
-    );
-    undef(*WriteMakefile);
-    *WriteMakefile = sub {
-        my %arg = @_;
-        for (keys %mm_req) {
-            unless (eval { ExtUtils::MakeMaker->VERSION($mm_req{$_}) }) {
-                warn "$_ $@" if $developer;
-                delete $arg{$_};
-            }
-        }
-        ExtUtils::MakeMaker::WriteMakefile(%arg);
-    };
+my %FallbackPrereqs = (
+  "Digest::MD5" => 2,
+  "Digest::SHA" => 1
+);
+
+
+unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
+  delete $WriteMakefileArgs{TEST_REQUIRES};
+  delete $WriteMakefileArgs{BUILD_REQUIRES};
+  $WriteMakefileArgs{PREREQ_PM} = \%FallbackPrereqs;
 }
+
+delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
+  unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
+
+WriteMakefile(%WriteMakefileArgs);
